# Assignment

./: .gitignore  Cargo.toml  README.md
first_app/: Cargo.toml
first_app/src/signing_service/: estimator.rs  sign_input.rs
offline_transaction/: Cargo.toml  README.md
offline_transaction/src/: errors.rs  lib.rs
offline_transaction/src/transaction/: generate_transaction.rs  mod.rs  sign_transaction.rs
offline_transaction/src/types/: bitcoin.rs  mod.rs
offline_transaction/src/utils/: btc_sat_trans.rs  fee_calculator.rs  mod.rs  str_to_address.rs
offline_transaction/tests/: platform_tests.rs  transaction_tests.rs
offline_transaction/tests/data/: sample.json  sample_error.json
offline_transaction_cli/: Cargo.toml  README.md
offline_transaction_cli/src/: main.rs  utils.rs
samples/: sample_input.json
src/: cli.rs  main.rs  types.rs
src/signing_service/: mod.rs
