[package]
name = "offline_transaction_cli"
version = "0.1.0"
authors = { workspace = true }
description = "CLI tool to generate transaction for blockchain"
edition = "2024"

[dependencies]
offline_transaction = { path = "../offline_transaction" }
clap = {version = "4", features = ["derive"]}
colored = "3"
anyhow = "1"